# cocarry_ws

./: HRC_CoCarrying_Agent_Instructions.md  HRC_Real_Guide.md  HRC_Setup_Guide.md  HRC_Simulation_Tracking_Guide.md  README.md  README_Controller.md  README_Motion_tracker.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/coord_transform/lib/coord_transform/: transform_node
install/coord_transform/share/coord_transform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/coord_transform/share/coord_transform/config/: transform_params.yaml
install/coord_transform/share/coord_transform/scripts/: calibrate_camera_to_robot.py
install/experiment_logger/lib/experiment_logger/: logger_node
install/experiment_logger/share/experiment_logger/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hc10dtp_bringup/lib/hc10dtp_bringup/: cartesian_streamer_hc10dtp.py  restamp_joint_states.py
install/hc10dtp_bringup/share/hc10dtp_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hc10dtp_moveit_config/share/hc10dtp_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hc10dtp_simulation/lib/hc10dtp_simulation/: motoros2_mock_node.py
install/hc10dtp_simulation/share/hc10dtp_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
install/trajectory_predictor/share/trajectory_predictor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/trajectory_predictor/share/trajectory_predictor/config/: predictor_params.yaml
log/: latest_build
src/coord_transform/: setup.cfg  setup.py
src/coord_transform/config/: transform_params.yaml
src/coord_transform/scripts/: calibrate_camera_to_robot.py
src/experiment_logger/: package.xml  setup.cfg  setup.py
src/experiment_logger/experiment_logger/: logger_node.py
src/hc10dtp_bringup/: CMakeLists.txt
src/hc10dtp_bringup/scripts/: cartesian_streamer_hc10dtp.py  go_home.py  restamp_joint_states.py
src/hc10dtp_moveit_config/: .setup_assistant  CMakeLists.txt
src/hc10dtp_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  motoman_hc10dtp.ros2_control.xacro  motoman_hc10dtp.srdf  motoman_hc10dtp.urdf.xacro  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/hc10dtp_moveit_config/launch/: hc10dtp_start.launch.py
src/hc10dtp_simulation/: CMakeLists.txt
src/hc10dtp_simulation/launch/: sim_start.launch.py
src/hc10dtp_simulation/scripts/: motoros2_mock_node.py
src/hrc_bringup/: CMakeLists.txt  package.xml
src/hrc_bringup/config/: all_params.yaml
src/hrc_bringup/launch/: cocarry_full.launch.py  cocarry_real_gui.launch.py  cocarry_sim_gui.launch.py  full_pipeline.launch.py
src/human_hand_msgs/: CMakeLists.txt
src/human_hand_msgs/msg/: SystemStatus.msg
src/kinect_tracker/: setup.cfg  setup.py
src/predictor_ui/: package.xml  setup.cfg  setup.py
src/predictor_ui/predictor_ui/: ui_node.py
src/realsense_tracker/: package.xml  setup.cfg  setup.py
src/trajectory_predictor/: setup.cfg  setup.py
src/trajectory_predictor/models/: gru_model_1_layers.h5  gru_model_2_layers.h5  gru_model_3_layers.h5  gru_velocity_1_layers.h5  gru_velocity_2_layers.h5  gru_velocity_3_layers.h5  lstm_velocity_3_layers.h5  rnn_velocity_3_layers.h5  scaler_x.pkl  scaler_y.pkl  scaler_y_vel.pkl
src/trajectory_predictor/trajectory_predictor/: inference_worker.py  predictor_node.py
(+984 files in other folders)
