<?xml version="1.0"?>
<package format="3">
  <name>experiment_logger</name>
  <version>0.1.0</version>
  <description>CSV logger for experiment data (measured + predicted positions)</description>
  <maintainer email="duy@experiment.local">Duy</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>human_hand_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
