<?xml version="1.0"?>
<package format="3">
  <name>hrc_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the full HRC pipeline</description>
  <maintainer email="duy@experiment.local">Duy</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>realsense_tracker</exec_depend>
  <exec_depend>trajectory_predictor</exec_depend>
  <exec_depend>predictor_ui</exec_depend>
  <exec_depend>experiment_logger</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
