<?xml version="1.0"?>
<package format="3">
  <name>predictor_ui</name>
  <version>0.1.0</version>
  <description>PyQt5 real-time dashboard for trajectory prediction visualization</description>
  <maintainer email="duy@experiment.local">Duy</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>human_hand_msgs</depend>
  <depend>std_srvs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
